--- a/scenario-3/sample-webapp/pom.xml
+++ b/scenario-3/sample-webapp/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>sample-webapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,7 +26,7 @@
         <artifactId>docker-maven-plugin</artifactId>
         <version>0.3.6</version>
         <configuration>
-          <imageName>${project.artifactId}:${project.version}</imageName>
+          <imageName>${project.artifactId}:${project.version}-${maven.build.timestamp}</imageName>
           <dockerDirectory>docker</dockerDirectory>
           <!--<baseImage>tomcat:7.0.65-jre7</baseImage>-->
           <!--<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>-->
